Changes in openair 0.4-10 [2011-03-07]
=====================================

*	Fixed calendarPlot main/quickText handling.

Changes in openair 0.4-9 [2011-03-04]
=====================================

*	Added new options to scatterPlot (plot.type, lwd, and lty)
         making it possible to add points and/or lines
	 

Changes in openair 0.4-8 [2011-02-24]
=====================================

*	Added new cutData type option 'daylight', enabled using new function
	cutDaylight.


Changes in openair 0.4-7 [2011-02-16]
=====================================

*     Added new function conditionalQuantile for model
      evaluation purposes.
*     Fixed importAURN to account for a change in web domain
      address at AEA.

