@@ -2,6 +2,8 @@ Changes in openair 0.4-10 [2011-03-07]
 =====================================
 
 *	Fixed calendarPlot main/quickText handling.
+*	Fixed calendarPlot first day of month error.
+*	Fixed summaryPlot site ordering when more than one site.
 
 Changes in openair 0.4-9 [2011-03-04]
 =====================================
